--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
-<div id="left-side" class="side">
-  <h2 class="title">
-    Sometimes a simple header is 
-    <span class="fancy">better</span>      
-  </h2>
-</div>
-<div id="right-side" class="side">
-  <h2 class="title">
-    Sometimes a simple header is  
-    <span class="fancy">worse</span>     
-  </h2>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Page Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+    <div id="left-side" class="side">
+        <h2 class="title">
+            Sometimes a simple header is 
+            <span class="fancy">better</span>      
+        </h2>
+    </div>
+    <div id="right-side" class="side">
+        <h2 class="title">
+            Sometimes a simple header is  
+            <span class="fancy">worse</span>     
+        </h2>
+    </div>
 
-<a id="source-link" class="meta-link" href="https://superlist.com" target="_blank">
-  <i class="fa-solid fa-link"></i>
-  <span class="roboto-mono">Source</span>
-</a>
+    <a id="source-link" class="meta-link" href="https://superlist.com" target="_blank">
+        <i class="fa-solid fa-link"></i>
+        <span class="roboto-mono">Source</span>
+    </a>
 
-<a id="yt-link" class="meta-link" href="https://youtu.be/zGKNMm4L-r4" target="_blank">
-  <i class="fa-brands fa-youtube"></i>
-  <span>2 min tutorial</span>
-</a>
+    <a id="yt-link" class="meta-link" href="https://youtu.be/zGKNMm4L-r4" target="_blank">
+        <i class="fa-brands fa-youtube"></i>
+        <span>2 min tutorial</span>
+    </a>
+
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
+</body>
+</html>
