--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
+    <title>BREAKTHROUGH</title>
     <link rel="stylesheet" type="text/css" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <div id="left-side" class="side">
         <h2 class="title">
-            Sometimes a simple header is 
-            <span class="fancy">better</span>      
+            
+            <span class="fancy">BREAKTHROUGH</span>      
         </h2>
     </div>
     <div id="right-side" class="side">
         <h2 class="title">
-            Sometimes a simple header is  
-            <span class="fancy">worse</span>     
+            
+            <span class="fancy">BREAKTHROUGH</span>     
         </h2>
     </div>
 
