--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </h2>
   </div>
 
-  <a id="subpage-button" href="/subpage.html">Jump in?</a>
+  <a id="subpage-button" href="https://danielsaxelsen.github.io/Breakthrough-Home/">Jump in?</a>
 
   <a id="source-link" class="meta-link" href="https://superlist.com" target="_blank">
     <i class="fa-solid fa-link"></i>
